[gd_scene load_steps=4 format=3 uid="uid://dt7515lkttwi7"]

[ext_resource type="Script" path="res://objects/static/base/base_static_object_3d.gd" id="1_7r4jg"]
[ext_resource type="BoxMesh" uid="uid://dfmt711kb8hlv" path="res://assets/meshes/base_static_object_3d_mesh.tres" id="2_qy0ug"]
[ext_resource type="Shape3D" uid="uid://ckgp3rdkikfxl" path="res://assets/collision_shapes/base_static_object_3d_collision_shape.tres" id="3_vrbvq"]

[node name="BaseStaticObject3D" type="StaticBody3D"]
collision_layer = 2
collision_mask = 13
script = ExtResource("1_7r4jg")

[node name="MeshInstance3d" type="MeshInstance3D" parent="."]
mesh = ExtResource("2_qy0ug")

[node name="CollisionShape3d" type="CollisionShape3D" parent="."]
shape = ExtResource("3_vrbvq")
